Address review feedback
Signed-off-by: Kai Kreuzer <kai@openhab.org>